--- a/index.html
+++ b/index.html
@@ -134,71 +134,17 @@
             </button>
             <div class="mobile-menu__wrapper">
                 <ul class="header__list header__list_mobile">
-                    <li class="header__list-item"><a href="#" class="header__list-link">О нас</a></li>
-                    <li class="header__list-item"><a href="#" class="header__list-link">как подключиться к проекту</a>
-                    </li>
-                    <li class="header__list-item"><a href="#" class="header__list-link">Полезно знать</a></li>
-                    <li class="header__list-item"><a href="#" class="header__list-link">Наши истории</a></li>
-                    <li class="header__list-item"><a href="#" class="header__list-link">Контакты</a></li>
-                    <li class="header__list-item">
-                        <a href="#" aria-label="поиск" class="header__list-link header__list-link_icon" data-button="mobile-search">
-                            <svg width="25" height="25" viewBox="0 0 25 25" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <path d="M15.8877 16.3076L23.5801 24" stroke="black" stroke-width="2.5" />
-                                <path
-                                    d="M18.6221 9.93605C18.6221 14.7332 14.7332 18.6221 9.93605 18.6221C5.13888 18.6221 1.25 14.7332 1.25 9.93605C1.25 5.13888 5.13888 1.25 9.93605 1.25C14.7332 1.25 18.6221 5.13888 18.6221 9.93605Z"
-                                    stroke="black" stroke-width="2.5" />
-                            </svg>
-                        </a>
-                    </li>
+                    <li class="header__list-item"><a href="#" class="header__list-link">Участки</a></li>
+                    <li class="header__list-item"><a href="#" class="header__list-link">Акции</a></li>
+                    <li class="header__list-item"><a href="#" class="header__list-link">О КОМПАНИИ</a></li>
+                    <li class="header__list-item"><a href="#" class="header__list-link">ДОМА</a></li>
+                    <li class="header__list-item"><a href="#" class="header__list-link">НОВОСТИ</a></li>
+                    <li class="header__list-item"><a href="#" class="header__list-link">КОНТАКТЫ</a></li>
                 </ul>
-                <ul class="header__contacts header__contacts_mobile">
-                    <li class="header__contacts-item">
-                        <a href="tel:88007002945" class="header__contacts-link">
-                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <path
-                                    d="M0.0191585 4.40839C0.0855332 3.67274 0.367626 3.05877 0.898624 2.52777L2.95624 0.470154C3.27705 0.160406 3.63105 0 3.97399 0C4.31139 0 4.65433 0.160406 4.96961 0.481217C5.3402 0.824153 5.68867 1.18368 6.06479 1.56534C6.25285 1.75893 6.44645 1.95252 6.64004 2.15165L8.28835 3.79995C8.63128 4.14289 8.80828 4.49136 8.80828 4.83429C8.80828 5.17723 8.63128 5.5257 8.28835 5.86863C8.11688 6.0401 7.94541 6.2171 7.77394 6.38857C7.25954 6.9085 6.77832 7.40078 6.24732 7.87094L6.21967 7.8986C5.76057 8.35769 5.83248 8.79465 5.94311 9.12653C5.94864 9.14312 5.95417 9.15418 5.9597 9.17078C6.3856 10.1941 6.97745 11.1676 7.90116 12.3291C9.56053 14.3757 11.3084 15.9631 13.2333 17.1855C13.4711 17.3404 13.7255 17.4621 13.9634 17.5838C14.1846 17.6944 14.3893 17.7995 14.5718 17.9156C14.5939 17.9267 14.6105 17.9378 14.6327 17.9488C14.8152 18.0429 14.9922 18.0871 15.1692 18.0871C15.6117 18.0871 15.8993 17.805 15.9933 17.711L18.062 15.6423C18.3828 15.3215 18.7313 15.15 19.0742 15.15C19.4946 15.15 19.8376 15.41 20.0533 15.6423L23.3886 18.9721C24.0523 19.6359 24.0468 20.3549 23.372 21.0574C23.1397 21.3063 22.8963 21.5441 22.6364 21.793C22.2492 22.1692 21.8454 22.5564 21.4803 22.9933C20.8442 23.6792 20.0865 24 19.1074 24C19.0134 24 18.9138 23.9945 18.8198 23.9889C17.0056 23.8728 15.3185 23.1648 14.0519 22.5619C10.6115 20.897 7.59141 18.5351 5.08576 15.5372C3.02262 13.0537 1.63428 10.7416 0.716093 8.26366C0.146377 6.74257 -0.0693412 5.52017 0.0191585 4.40839Z"
-                                    fill="#F69000" />
-                            </svg>
-                            8-800-700-29-45
-                        </a>
-                    </li>
-                    <li class="header__contacts-item">
-                        <a href="tel:88007000934" class="header__contacts-link">
-                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <path
-                                    d="M0.0191585 4.40839C0.0855332 3.67274 0.367626 3.05877 0.898624 2.52777L2.95624 0.470154C3.27705 0.160406 3.63105 0 3.97399 0C4.31139 0 4.65433 0.160406 4.96961 0.481217C5.3402 0.824153 5.68867 1.18368 6.06479 1.56534C6.25285 1.75893 6.44645 1.95252 6.64004 2.15165L8.28835 3.79995C8.63128 4.14289 8.80828 4.49136 8.80828 4.83429C8.80828 5.17723 8.63128 5.5257 8.28835 5.86863C8.11688 6.0401 7.94541 6.2171 7.77394 6.38857C7.25954 6.9085 6.77832 7.40078 6.24732 7.87094L6.21967 7.8986C5.76057 8.35769 5.83248 8.79465 5.94311 9.12653C5.94864 9.14312 5.95417 9.15418 5.9597 9.17078C6.3856 10.1941 6.97745 11.1676 7.90116 12.3291C9.56053 14.3757 11.3084 15.9631 13.2333 17.1855C13.4711 17.3404 13.7255 17.4621 13.9634 17.5838C14.1846 17.6944 14.3893 17.7995 14.5718 17.9156C14.5939 17.9267 14.6105 17.9378 14.6327 17.9488C14.8152 18.0429 14.9922 18.0871 15.1692 18.0871C15.6117 18.0871 15.8993 17.805 15.9933 17.711L18.062 15.6423C18.3828 15.3215 18.7313 15.15 19.0742 15.15C19.4946 15.15 19.8376 15.41 20.0533 15.6423L23.3886 18.9721C24.0523 19.6359 24.0468 20.3549 23.372 21.0574C23.1397 21.3063 22.8963 21.5441 22.6364 21.793C22.2492 22.1692 21.8454 22.5564 21.4803 22.9933C20.8442 23.6792 20.0865 24 19.1074 24C19.0134 24 18.9138 23.9945 18.8198 23.9889C17.0056 23.8728 15.3185 23.1648 14.0519 22.5619C10.6115 20.897 7.59141 18.5351 5.08576 15.5372C3.02262 13.0537 1.63428 10.7416 0.716093 8.26366C0.146377 6.74257 -0.0693412 5.52017 0.0191585 4.40839Z"
-                                    fill="#F69000" />
-                            </svg>
-                            8-800-700-09-34
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="mobile-menu__search">
-                <form action="#" class="mobile-menu__search-form">
-                    <input aria-label="Поиск" type="text" placeholder="Поиск" class="mobile-menu__search-input">
-                    <div class="mobile-menu__search-buttons">
-                        <button aria-label="отчистить" type="reset" class="mobile-menu__search-button">
-                            <svg width="20" height="21" viewBox="0 0 20 21" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <path d="M1.48535 2L18.4559 18.9706M18.4561 2L1.48549 18.9706" stroke="black"
-                                    stroke-width="2.5" stroke-linecap="round" />
-                            </svg>
-                        </button>
-                        <button aria-label="найти" type="submit" class="mobile-menu__search-button">
-                            <svg width="25" height="25" viewBox="0 0 25 25" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <path d="M15.8882 16.3076L23.5806 24" stroke="black" stroke-width="2.5" />
-                                <path
-                                    d="M18.6221 9.93605C18.6221 14.7332 14.7332 18.6221 9.93605 18.6221C5.13888 18.6221 1.25 14.7332 1.25 9.93605C1.25 5.13888 5.13888 1.25 9.93605 1.25C14.7332 1.25 18.6221 5.13888 18.6221 9.93605Z"
-                                    stroke="black" stroke-width="2.5" />
-                            </svg>
-                        </button>
-                    </div>
-                </form>
+                <div class="header__contacts header__contacts_mobile">
+                    <a href="tel:79005557799" class="header__phone">+7 (900) 555-77-99</a>
+                    <button class="button button_small header__button">Заказать звонок</button>
+                </div>
             </div>
         </div>
     </div>
