--- a/index.html
+++ b/index.html
@@ -422,6 +422,28 @@
                 </div>
             </div>
         </section>
+        <section class="consult">
+            <div class="container">
+                <div class="consult__wrapper">
+                    <h2 class="consult__title">
+                        ПОДОБРАТЬ ЗЕМЕЛЬНЫЙ УЧАСТОК<br>
+                        ПРОКОНСУЛЬТИРОВАТЬСЯ ПО УСЛОВИЯМ
+                    </h2>
+                    <p class="consult__label">В этом Вам помогут наши специалисты.</p>
+                    <button class="button consult__button">получить консультацию</button>
+                    <p class="consult__message">
+                        Профессиональные менеджеры ответят на все
+                        Ваши вопросы и помогут выбрать земельный участок,
+                        который будет соответствовать Вашим требованиям.
+                        Наши <a href="#">ПРОЕКТЫ</a> созданы для Вас!
+                    </p>
+                    <picture>
+                        <source media="(max-width: 646px)" srcset="./img/consult-bg-2.png">
+                        <img src="./img/consult-bg.png" class="consult__bg">
+                    </picture>
+                </div>
+            </div>
+        </section>
     </main>
     <div class="search">
         <div class="header__search">
