--- a/index.html
+++ b/index.html
@@ -152,15 +152,13 @@
                         <div class="selection__grid">
                             <div class="selection__form-wrap">
                                 <p class="selection__form-label">Направление</p>
-                                <div class="select">
+                                <div class="select select_2">
                                     <div class="select__value">
                                         <p class="select__value-text">Выберите направление</p>
                                         <div class="select__value-arrow">
-                                            <svg width="12" height="17" viewBox="0 0 12 17" fill="none"
-                                                xmlns="http://www.w3.org/2000/svg">
-                                                <path d="M6 0L11.1962 7.5H0.803848L6 0Z" fill="#1E1E1E" />
-                                                <path d="M6 17L0.803849 9.5L11.1962 9.5L6 17Z" fill="#1E1E1E" />
-                                            </svg>
+                                            <svg width="19" height="10" viewBox="0 0 19 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path d="M1 1L8.81463 8.35495C9.19968 8.71735 9.80031 8.71735 10.1854 8.35495L18 1" stroke="#838383" stroke-linecap="round"/>
+                                            </svg>                                              
                                         </div>
                                     </div>
                                     <div class="select__list select__list_2">
@@ -269,7 +267,11 @@
                         </div>
                         <button type="submit" class="button button_white selection__form-button">ПРИМЕНИТЬ</button>
                     </form>
-                    <img src="./img/selection-bg.png" alt="background-wafe" class="selection__wrapper-bg">
+                    <picture>
+                        <source media="(max-width: 646px)" srcset="./img/selection-bg-2.png">
+                        <img src="./img/selection-bg.png" alt="background-wafe" class="selection__wrapper-bg">
+                    </picture>
+                    <!-- <img src="./img/selection-bg.png" alt="background-wafe" class="selection__wrapper-bg"> -->
                 </div>
             </div>
         </section>
@@ -336,7 +338,7 @@
                         <span class="projects__toggler-label">На карте </span>
                     </div>
                 </div>
-                <div class="projects__slider">
+                <div class="projects__slider active">
                     <div class="swiper projects__swiper">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
@@ -349,7 +351,7 @@
                                         от 2.1 млн. ₽ <span>| от 6 сот.</span>
                                     </div>
                                     <p class="projects__card-description">
-                                        <span>Горьковское шоссе (40 км)</span><br>
+                                        <span>Горьковское шоссе <span>(40 км)</span></span><br>
                                         Всегочас езды от Москвы вблизи каскада озёр и леса, с полной городской
                                         инфраструктурой.
                                     </p>
@@ -370,7 +372,7 @@
                                         от 2.1 млн. ₽ <span>| от 6 сот.</span>
                                     </div>
                                     <p class="projects__card-description">
-                                        <span>Горьковское шоссе (40 км)</span><br>
+                                        <span>Горьковское шоссе <span>(40 км)</span></span><br>
                                         Всегочас езды от Москвы вблизи каскада озёр и леса, с полной городской
                                         инфраструктурой.
                                     </p>
@@ -391,7 +393,7 @@
                                         от 2.1 млн. ₽ <span>| от 6 сот.</span>
                                     </div>
                                     <p class="projects__card-description">
-                                        <span>Горьковское шоссе (40 км)</span><br>
+                                        <span>Горьковское шоссе <span>(40 км)</span></span><br>
                                         Всегочас езды от Москвы вблизи каскада озёр и леса, с полной городской
                                         инфраструктурой.
                                     </p>
@@ -404,6 +406,9 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="projects__map">
+                    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ac8bce4c86954b5b952b0468806df7a9a43dac824e2d70fd71be6c6002790aa10&amp;width=100%25&amp;height=100%25&amp;lang=ru_RU&amp;scroll=false"></script>
                 </div>
             </div>
         </section>
@@ -522,7 +527,7 @@
                             формате.
                         </p>
                         <span class="process__card-step">
-                            1 шаг
+                            1 <span>шаг</span>
                         </span>
                         <img src="./img/process-arrow.svg" alt="icon" class="process__card-arrow">
                     </div>
@@ -533,7 +538,7 @@
                             Выезд на место позволит Вам остановиться на понравившемся участке.
                         </p>
                         <span class="process__card-step">
-                            2 шаг
+                            2 <span>шаг</span>
                         </span>
                         <img src="./img/process-arrow.svg" alt="icon" class="process__card-arrow">
                     </div>
@@ -548,7 +553,7 @@
                             гос.органы.
                         </p>
                         <span class="process__card-step">
-                            4 шаг
+                            4 <span>шаг</span>
                         </span>
                         <img src="./img/process-arrow.svg" alt="icon" class="process__card-arrow">
                     </div>
@@ -560,7 +565,7 @@
                             и о участке, все договора и варианты оплат.
                         </p>
                         <span class="process__card-step">
-                            3 шаг
+                            3 <span>шаг</span>
                         </span>
                         <img src="./img/process-arrow.svg" alt="icon" class="process__card-arrow">
                     </div>
@@ -833,7 +838,7 @@
                     <p class="modal__form-error" data-err="phone">Поле должно быть заполнено</p>
                 </div>
                 <div class="modal__from-wrap">
-                    <div class="select">
+                    <div class="select select_2">
                         <div class="select__value">
                             <p class="select__value-text">Удобное время для звонка</p>
                             <div class="select__value-arrow">
