--- a/village.html
+++ b/village.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <header class="header header_village">
         <div class="container">
             <div class="header__wrapper">
                 <a href="/" class="header__logo">
@@ -44,15 +44,21 @@
                 </button>
             </div>
         </div>
-    </header>
-    <main>
         <section class="second-menu">
             <div class="container">
                 <div class="second-menu__wrapper">
                     <div class="second-menu__title">ПАШУКОВСКИЕ ОЗЁРА</div>
+                    <ul class="second-menu__list">
+                        <li class="second-menu__list-item"><a href="#" class="second-menu__list-link">О ПРОЕКТЕ</a></li>
+                        <li class="second-menu__list-item"><a href="#" class="second-menu__list-link">РАСПОЛОЖЕНИЕ</a></li>
+                        <li class="second-menu__list-item"><a href="#" class="second-menu__list-link">ПЛАН и ЦЕНЫ</a></li>
+                        <li class="second-menu__list-item"><a href="#" class="second-menu__list-link">ФОТО</a></li>
+                    </ul>
                 </div>
             </div>
         </section>
+    </header>
+    <main>
         <section class="hero hero_village">
             <div class="container">
                 <div class="hero__wrapper">
@@ -65,6 +71,70 @@
                         <button class="button hero__slide-button" toggle="#callback">ПОДОБРАТЬ УЧАСТОК</button>
                         <img src="./img/hero-2.jpg" alt="bg-image" class="hero__slide-img">
                     </div>
+                </div>
+            </div>
+        </section>
+        <section class="about">
+            <div class="container">
+                <div class="about__wrapper">
+                    <h2 class="about__title">О проекте</h2>
+                    <p class="about__text">
+                        «Пашуковские озёра» - проект расположенный в идеальной локации, меньше часа езды от Москвы в пешей доступности от каскада чистейших озёр Подмосковья. Комфортное место для отдыха и жизни.
+                    </p>
+                    <p class="about__text">
+                        Хорошая транспортная доступность и многофункциональная окружающая инфраструктура.
+                        Купите участок и постройте дом или дачу по собственному проекту и  стилю. Участки продаются без подряда
+                    </p>
+                    <p class="about__text">
+                        Благоустройство проекта и  его внутренняя структура созданы  по уровню  коттеджных посёлков комфорт класса.
+                    </p>
+                    <picture>
+                        <source media="(max-width: 646px)" srcset="./img/about-bg-2.png">
+                        <img src="./img/about-bg.png" alt="background-wafe" class="about__wrapper-bg">
+                    </picture>
+                </div>
+            </div>
+        </section>
+        <section class="cards">
+            <div class="container">
+                <div class="cards__grid">
+                    <div class="cards__card">
+                        <div class="cards__card-icon">
+                            <img src="./img/cards-1.svg" alt="icon">
+                        </div>
+                        <p class="cards__card-title">категория земель</p>
+                        <p class="cards__card-text">
+                            Сельскохозяйственного назначения
+                        </p>
+                    </div>
+                    <div class="cards__card">
+                        <div class="cards__card-icon">
+                            <img src="./img/cards-2.svg" alt="icon">
+                        </div>
+                        <p class="cards__card-title">разрешённый вид использования</p>
+                        <p class="cards__card-text">Дачное строительство</p>
+                    </div>
+                    <div class="cards__card">
+                        <div class="cards__card-icon">
+                            <img src="./img/cards-3.svg" alt="icon">
+                        </div>
+                        <p class="cards__card-title">ВИД ПРАВА НА УЧАСТОК</p>
+                        <p class="cards__card-text">Частная собственность</p>
+                    </div>
+                    <div class="cards__card">
+                        <div class="cards__card-icon">
+                            <img src="./img/cards-4.svg" alt="icon">
+                        </div>
+                        <p class="cards__card-title">КОНЦЕПЦИЯ УПРАВЛЕНИЯ</p>
+                        <p class="cards__card-text">ТСН (сообщество собственности участков)</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="hot">
+            <div class="container">
+                <h2 class="hot__title">ГОРЯЩИЕ ПРЕДЛОЖЕНИЯ (участки по выгодным ценам)</h2>
+                <div class="hot__grid">
                 </div>
             </div>
         </section>
