--- a/about.html
+++ b/about.html
@@ -156,8 +156,68 @@
                                     <img src="./img/connection-1.svg" alt="background-wafe">
                                 </picture>
                             </div>
+                            <p class="connection__card-title">Общие обращения</p>
+                            <a href="mailto:infrazeminfo@gmail.com" class="connection__card-link">infrazeminfo@gmail.com</a>
+                        </div>
+                        <div class="connection__card">
+                            <div class="connection__card-img">
+                                <picture>
+                                    <source media="(max-width: 646px)" srcset="./img/connection-2-2.svg">
+                                    <img src="./img/connection-2.svg" alt="background-wafe">
+                                </picture>
+                            </div>
+                            <p class="connection__card-title">Департамент маркетинга и рекламы</p>
+                            <a href="mailto:infrazeminfo@gmail.com" class="connection__card-link">infrazeminfo@gmail.com</a>
+                        </div>
+                        <div class="connection__card">
+                            <div class="connection__card-img">
+                                <picture>
+                                    <source media="(max-width: 646px)" srcset="./img/connection-3-3.svg">
+                                    <img src="./img/connection-3.svg" alt="background-wafe">
+                                </picture>
+                            </div>
+                            <p class="connection__card-title">Служба клиентской поддержки</p>
+                            <a href="mailto:infrazeminfo@gmail.com" class="connection__card-link">infrazeminfo@gmail.com</a>
+                        </div>
+                        <div class="connection__card">
+                            <div class="connection__card-img">
+                                <picture>
+                                    <source media="(max-width: 646px)" srcset="./img/connection-4-4.svg">
+                                    <img src="./img/connection-4.svg" alt="background-wafe">
+                                </picture>
+                            </div>
+                            <p class="connection__card-title">Руководство компании</p>
+                            <a href="mailto:infrazeminfo@gmail.com" class="connection__card-link">infrazeminfo@gmail.com</a>
                         </div>
                     </div>
+                    <button class="button connection__button">пройти опрос - получить специальный условия</button>
+                </div>
+            </div>
+        </section>
+        <section class="callback callback_about">
+            <div class="container">
+                <div class="callback__wrapper">
+                    <h2 class="callback__title">ЗАПРОСИТЬ ДОКУМЕНТЫ КОМПАНИИ</h2>
+                    <form action="#" class="callback__form">
+                        <div class="modal__form-wrap">
+                            <input type="text" name="name" placeholder="Введите ваше имя">
+                            <p class="modal__form-error">Поле должно быть заполнено</p>
+                        </div>
+                        <div class="modal__form-wrap">
+                            <input type="text" name="phone" data-input="masked" placeholder="+ 7 ( ___ ) ___ __ __">
+                            <p class="modal__form-error">Поле должно быть заполнено</p>
+                        </div>
+                        <div class="modal__form-wrap comment">
+                            <textarea name="comment" placeholder="Введите ваше сообщение"></textarea>
+                            <p class="modal__form-error">Поле должно быть заполнено</p>
+                        </div>
+                        <button type="submit"
+                            class="button button_white selection__form-button callback__form-button">Отправить</button>
+                    </form>
+                    <picture>
+                        <source media="(max-width: 646px)" srcset="./img/callback-bg-2.png">
+                        <img src="./img/callback-bg.png" alt="background-wafe" class="callback__wrapper-bg">
+                    </picture>
                 </div>
             </div>
         </section>
