--- a/index.html
+++ b/index.html
@@ -316,8 +316,8 @@
                             С ОПЫТНОЙ КОМАНДОЙ НЕ ПРОСТО ПРОФЕССИОНАЛОВ, А ЭКСПЕРТОВ РЫНКА
                         </p>
                         <p class="advantages__text">
-                            СОВРЕМННЫЙ ПРОДУМАННЫЙ ПОДХОД К КАЧЕСТВУ ЗЕМЕЛЬНЫХ УЧАСТКОВ
-                            И ФОРМИРОВАНИЮ ЗАГОРОДНЫХ КОМЬЮНИТИ
+                            СОВРЕМННЫЙ ПРОДУМАННЫЙ ПОДХОД К КАЧЕСТВУ ЗЕМЕЛЬНЫХ УЧАСТКОВ<br>
+                            И ФОРМИРОВАНИЮ ЗАГОРОДНЫХ<br> КОМЬЮНИТИ
                         </p>
                     </div>
                 </div>
