--- a/village.html
+++ b/village.html
@@ -81,16 +81,16 @@
                 <div class="about__wrapper">
                     <h2 class="about__title">О проекте</h2>
                     <p class="about__text">
-                        «Пашуковские озёра» - проект расположенный в идеальной локации, меньше часа езды от Москвы в
-                        пешей доступности от каскада чистейших озёр Подмосковья. Комфортное место для отдыха и жизни.
+                        «Пашуковские озёра» - проект расположенный в идеальной локации, меньше<br> часа езды от Москвы в
+                        пешей доступности от каскада чистейших озёр<br> Подмосковья. Комфортное место для отдыха и жизни.
                     </p>
                     <p class="about__text">
-                        Хорошая транспортная доступность и многофункциональная окружающая инфраструктура.
-                        Купите участок и постройте дом или дачу по собственному проекту и  стилю. Участки продаются без
+                        Хорошая транспортная доступность и многофункциональная окружающая<br> инфраструктура.<br>
+                        Купите участок и постройте дом или дачу по собственному проекту и стилю.<br> Участки продаются без
                         подряда
                     </p>
                     <p class="about__text">
-                        Благоустройство проекта и  его внутренняя структура созданы  по уровню  коттеджных посёлков
+                        Благоустройство проекта и его внутренняя структура созданы по уровню<br> коттеджных посёлков
                         комфорт класса.
                     </p>
                     <picture>
@@ -107,7 +107,7 @@
                         <div class="cards__card-icon">
                             <img src="./img/cards-1.svg" alt="icon">
                         </div>
-                        <p class="cards__card-title">категория земель</p>
+                        <p class="cards__card-title">категория<br> земель</p>
                         <p class="cards__card-text">
                             Сельскохозяйственного назначения
                         </p>
@@ -117,13 +117,13 @@
                             <img src="./img/cards-2.svg" alt="icon">
                         </div>
                         <p class="cards__card-title">разрешённый вид использования</p>
-                        <p class="cards__card-text">Дачное строительство</p>
+                        <p class="cards__card-text">Дачное<br> строительство</p>
                     </div>
                     <div class="cards__card">
                         <div class="cards__card-icon">
                             <img src="./img/cards-3.svg" alt="icon">
                         </div>
-                        <p class="cards__card-title">ВИД ПРАВА НА УЧАСТОК</p>
+                        <p class="cards__card-title">ВИД ПРАВА<br> НА УЧАСТОК</p>
                         <p class="cards__card-text">Частная собственность</p>
                     </div>
                     <div class="cards__card">
@@ -245,6 +245,7 @@
                         <div class="hot__card-price">1.8 млн ₽</div>
                     </div>
                 </div>
+                <a href="#" class="hot__button button">ПОСМОТРЕТЬ ВСЕ УЧАСТКИ</a>
             </div>
         </section>
         <section class="improvement">
@@ -364,7 +365,7 @@
                             <p class="modal__form-error">Поле должно быть заполнено</p>
                         </div>
                         <div class="modal__form-wrap">
-                            <input type="text" name="phone" data-input="masked" placeholder="+ 7 ( ___ ) ___ __ __">
+                            <input type="text" name="phone" data-input="masked" class="letter" placeholder="+ 7 ( ___ ) ___ __ __">
                             <p class="modal__form-error">Поле должно быть заполнено</p>
                         </div>
                         <div class="modal__form-wrap comment">
@@ -381,7 +382,7 @@
                 </div>
             </div>
         </section>
-        <section class="location">
+        <section class="location location_village">
             <div class="container">
                 <h2 class="location__title">РАСПОЛОЖЕНИЕ</h2>
                 <div class="location__wrapper">
@@ -398,7 +399,7 @@
                                 Пн-Вс: с 10:00 до 20:00
                             </p>
                         </div>
-                        <div class="location__block">
+                        <div class="location__block location__block_pixel">
                             <p class="location__label">Координаты</p>
                             <p class="location__text">
                                 55.902773, 38.263738
