--- a/news.html
+++ b/news.html
@@ -62,11 +62,11 @@
                     </div>
                 </div>
             </section>
-            <section class="news">
+            <section class="news news_newspage">
                 <div class="container">
                     <div class="news__grid">
                         <div class="news__card">
-                            <div class="news__card-img"><img src="./img/news-1.png" alt="image"></div>
+                            <div class="news__card-img news__card-img_big"><img src="./img/news-1.png" alt="image"></div>
                             <div class="news__card-body">
                                 <div class="news__card-title">
                                     «ИНФРАЗЕМ» новый бренд на рынке загородной недвижимости
@@ -76,7 +76,7 @@
                             </div>
                         </div>
                         <div class="news__card">
-                            <div class="news__card-img"><img src="./img/news-2.png" alt="image"></div>
+                            <div class="news__card-img news__card-img_small"><img src="./img/news-2.png" alt="image"></div>
                             <div class="news__card-body">
                                 <div class="news__card-title">
                                     «Купавинский»
@@ -86,7 +86,7 @@
                             </div>
                         </div>
                         <div class="news__card">
-                            <div class="news__card-img"><img src="./img/news-3.png" alt="image"></div>
+                            <div class="news__card-img news__card-img_small"><img src="./img/news-3.png" alt="image"></div>
                             <div class="news__card-body">
                                 <div class="news__card-title">
                                     «ИНФРАЗЕМ» выбрали самый популярный размер участков
